Fix nav items alignment when in "burger" mode
See https://github.com/jekyll/jekyll/pull/3329

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -93,6 +93,9 @@
             display: block;
             padding: 5px 10px;
 
+            margin-right: 0 !important;
+            margin-left: 20px;
+
             @include a-colors;
         }
     }
